trails change color as they are completed

--- a/src/mixins/variables.scss
+++ b/src/mixins/variables.scss
@@ -2,6 +2,7 @@
 $st_red: #fc0452;
 $st_blue: #2da6bd;
 $st_yellow: #EED100 ;
+$st_blue_2:  #43aed0;
 
 $waypointcolor: $st_red;
 $trailcolor: $st_blue;
