--- a/src/mixins/variables.scss
+++ b/src/mixins/variables.scss
@@ -7,6 +7,7 @@ $st_blue_2:  #43aed0;
 $waypointcolor: $st_red;
 $trailcolor: $st_blue;
 $donecolor: lighten($st_yellow, 10%);
+$startingwp: #7072d9;
 
 $lighttrailcolor: #70C0D8;
 
